--- a/201909/201909.md
+++ b/201909/201909.md
@@ -1,8 +1,7 @@
 # September
 Daeho's September I Learned
 
-- September 18th [X]
- - ([Make Dummy File for Test](https://www.notion.so/linux-a09c4b69becd4efaaf8b575cf1744910))
+- [X] September 18th ([Make Dummy File for Test](https://www.notion.so/linux-a09c4b69becd4efaaf8b575cf1744910))
 
 - September 19th [ ]
 - September 20th [ ]
