--- a/201909/201909.md
+++ b/201909/201909.md
@@ -1,7 +1,10 @@
 # September
 Daeho's September I Learned
 
-- [X] September 18th ([Make Dummy File for Test](https://www.notion.so/linux-a09c4b69becd4efaaf8b575cf1744910))
+- [X] September 18th 
+([Make Dummy File for Test](https://www.notion.so/linux-a09c4b69becd4efaaf8b575cf1744910))
+([Docker DNS](https://www.notion.so/docker-dns-5298301d9b3747da9233eebe05bc0907))
+([Model Mapper](https://www.notion.so/ModelMapper-ba0b800e9fc04dceb8ed4b44b43de65e))
 
 - September 19th [ ]
 - September 20th [ ]
